manifests/00-operators.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    app.kubernetes.io/part-of: hello-rbac-demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuadrant-system
  labels:
    app.kubernetes.io/part-of: hello-rbac-demo
