manifests/02-keycloak.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-rbac
  labels:
    app.kubernetes.io/part-of: hello-rbac-demo
    istio.io/rev: hello-rbac
